--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
